# Capture settings screen only - assumes app is already launched
appId: com.jhaa.healthlogger.devtest
---
# Settings screen
- tapOn: {id: 'settingsTabButton'}
- assertVisible: {id: 'settings-screen'}
- takeScreenshot: '${MAESTRO_SCREENSHOT_OUTPUT_DIR || "e2e/screenshots"}/settings_screen_${testAppearanceMode || "UNKNOWN"}'

# Go back to the home screen
- tapOn: {id: 'homeTabButton'}
- assertVisible: {id: 'home-screen'}
